# aurora_slint_demo

./: .env.template  .gitignore  Cargo.toml  Cross.toml  README.md  arm_build.sh  build.rs  com.lmaxyz.SlintAuroraExample.desktop  deploy.sh
.cargo/: config.toml
rpm/: com.lmaxyz.SlintAuroraDemo.desktop  com.lmaxyz.SlintAuroraExample.spec
src/: main.rs
ui/: appwindow.slint
