[package]
name = "simple_slint_aurora"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = {version="1.4", default-features = false, features = ["std", "backend-winit-wayland", "renderer-winit-skia", "compat-1-2"]}

[build-dependencies]
slint-build = "1.4"

[patch.crates-io]
winit = {git="https://github.com/lmaxyz/winit", branch="aurora_adaptation"}
