[package]
name = "simple_slint_aurora"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = {version="1.7.2", default-features = false, features = ["std", "backend-winit-wayland", "renderer-winit-femtovg", "compat-1-2"]}

[build-dependencies]
slint-build = "1.7.2"

[patch.crates-io]
winit = {git="https://github.com/lmaxyz/winit", branch="aurora"}